tests/baselines/reference/privacyCheckTypeOfInvisibleModuleNoError.errors.txt
==== tests/cases/compiler/privacyCheckTypeOfInvisibleModuleNoError.ts (1 errors) ====
    module Outer {
        module Inner {
            export var m: number;
        }
    
        export var f: typeof Inner; // Since we dont unwind inner any more, it is error here
                   ~~~~~~~~~~~~~~~
!!! privacyCheckTypeOfInvisibleModuleNoError.ts(6,16): error TS2031: Exported variable 'f' is using inaccessible module 'Inner'.
    }
    